# study

./: .gitignore
exercises/RTOS_STMCube/: .mxproject  RTOS_STMCube.ioc
exercises/RTOS_STMCube/Drivers/BSP/Components/ili9341/: ili9341.h
exercises/RTOS_STMCube/Drivers/BSP/STM32F746G-Discovery/: stm32746g_discovery_audio.h  stm32746g_discovery_camera.h  stm32746g_discovery_qspi.h
exercises/RTOS_STMCube/Inc/: usbh_conf.h
exercises/RTOS_STMCube/MDK-ARM/: RTOS_STMCube.uvguix.Rodrigo  RTOS_STMCube.uvoptx  RTOS_STMCube.uvprojx  startup_stm32f429xx.lst
exercises/RTOS_STMCube/MDK-ARM/RTE/_RTOS_STMCube/: RTE_Components.h
exercises/RTOS_STMCube/MDK-ARM/RTOS_STMCube/: RTOS_STMCube.axf  RTOS_STMCube.build_log.htm  RTOS_STMCube.hex  RTOS_STMCube.htm  RTOS_STMCube.lnp  RTOS_STMCube.map  RTOS_STMCube_RTOS_STMCube.dep  cmsis_os2.crf  cmsis_os2.d  croutine.crf  croutine.d  event_groups.crf  event_groups.d  freertos.crf  freertos.d  heap_4.crf  heap_4.d  ili9341.crf  ili9341.d  l3gd20.crf  l3gd20.d  list.crf  list.d  main.crf  main.d  port.crf  port.d  queue.crf  queue.d  startup_stm32f429xx.d  stm32f429i_discovery.crf  stm32f429i_discovery.d  stm32f429i_discovery_eeprom.crf  stm32f429i_discovery_eeprom.d  stm32f429i_discovery_gyroscope.crf  stm32f429i_discovery_gyroscope.d  stm32f429i_discovery_io.crf  stm32f429i_discovery_io.d  stm32f429i_discovery_lcd.crf  stm32f429i_discovery_lcd.d  (+92 more)
exercises/RTOS_STMCube/Src/: freertos.c  main.c  usbh_conf.c
exercises/matrices/matrix-1d-cpp/: CMakeLists.txt
exercises/matrices/matrix-1d-cpp/doc/: class-diagram.mdj
exercises/matrices/matrix-1d-cpp/ext/jsonlib/: CMakeLists.txt
exercises/matrices/matrix-1d-cpp/ext/jsonlib/lib/: libjsoncpp.so.1.9.4
exercises/matrices/matrix-1d-cpp/test/: golden_matrices.json  golden_model.py
exercises/matrices/matrix-1d-cpp/test/golden-model-py/: golden_model.py
exercises/matrices/matrix-1d-cpp/test/json-test/: CMakeLists.txt
exercises/matrices/matrix-1d-cpp/test/json-test/src/: readFromStream.cpp
exercises/matrices/matrix-1d-cpp/test/unit-test/include/: json_matrix_parser.h
exercises/matrices/matrix-1d-cpp/test/unit-test/src/: json_matrix_parser.cpp
exercises/matrices/matrix-2d-cpp/: CMakeLists.txt
exercises/matrices/matrix-2d-cpp/include/: matrix.h  matrix_factory.h
exercises/matrices/matrix-2d-cpp/src/: main.cpp  matrix.cpp  matrix_factory.cpp
exercises/phone-directory-cpp/: CMakeLists.txt  MiniphonedirUML.vsdx
exercises/phone-directory-cpp/inc/: contactdata.h  singleton.h
exercises/phone-directory-cpp/src/: contactdata.cpp  main.cpp  singleton.cpp
